<resources>
    <string name="app_name">Muxic</string>
    <string name="top_artists">Top Artists</string>
    <string name="artistnamehere">ArtistNameHere</string>
    <string name="artistpicture">ArtistPicture</string>
    <string name="playcount">Playcount:</string>
    <string name="listeners">Listeners:</string>
    <string name="playcountvalue">playcountValue</string>
    <string name="listenersvalue">listenersValue</string>
    <string name="last_fm_page">Last FM Page</string>
    <string name="tracknamehere">TrackNameHere</string>
    <string name="artist">Artist</string>
    <string name="artistlabel">Artist:</string>
    <string name="artistvalue">artistValue</string>
    <string name="top_tracks">Top Tracks</string>
    <string name="favourites">Favourites</string>
    <string name="favourite_artists">Favourite Artists</string>
    <string name="favourite_tracks">Favourite Tracks</string>
    <string name="favourite">Favourite</string>
    <string name="unfavourite">Unfavourite</string>
</resources>
